@@ -5,6 +5,7 @@ NOCC 1.4    ?? ??, 200?
       (Arnaud Boudou).
 
   Patches
+    * Patch #1648196 : Use <label> for login box (Tim Gerundt).
     * Patch #1639027 : RSS: Add nocc_login as parameter (Tim Gerundt).
     * Patch #1639021 : RSS: Fix array_shift warning (Tim Gerundt).
     * Patch #1632779 : Fix Invalid HTML in html/prefs.php (Tim Gerundt).
